@@ -1,3 +1,7 @@
+Thu Jul 31 14:11:00 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* tool/resolve_changelog.rb: extracted from tool/merge_from_trunk.rb.
+
 Thu Jul 31 12:23:53 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* pack.c (pack_unpack): upper half of hexdigits has never been used.
